# mupen64plus-qt

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  mupen64plus-qt.pro
build-scripts/: revision.sh  travis-ci.sh
build-scripts/platform/: linux.sh  osx.sh  windows.sh
macosx/: mupen64plus.icns
resources/: README.txt  mupen64plus-qt.1  mupen64plus-qt.6  mupen64plus-qt.desktop  mupen64plusqt.qrc
resources/locale/: mupen64plus-qt_fr.qm  mupen64plus-qt_fr.ts  mupen64plus-qt_pt.qm  mupen64plus-qt_pt.ts  mupen64plus-qt_pt_BR.ts  mupen64plus-qt_ru.qm  mupen64plus-qt_ru.ts
resources/other/: LICENSE
src/: aboutdialog.cpp  aboutdialog.h  clickablewidget.cpp  clickablewidget.h  common.cpp  common.h  configeditor.cpp  configeditor.h  downloaddialog.cpp  downloaddialog.h  emulatorhandler.cpp  emulatorhandler.h  gamesettingsdialog.cpp  gamesettingsdialog.ui  global.h  logdialog.cpp  logdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mupen64plusqt.cpp  mupen64plusqt.h  romcollection.cpp  romcollection.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  thegamesdbscraper.cpp  thegamesdbscraper.h  thegamesdbscrapper.cpp  thegamesdbscrapper.h  treewidgetitem.cpp  treewidgetitem.h
src/dialogs/: aboutdialog.cpp  configeditor.cpp  configeditor.h  controlinfodialog.cpp  controlinfodialog.h  downloaddialog.cpp  downloaddialog.h  gamesettingsdialog.cpp  gamesettingsdialog.h  gamesettingsdialog.ui  inputeditordialog.cpp  inputeditordialog.h  inputeditordialog.ui  keycodesdialog.cpp  keycodesdialog.h  logdialog.cpp  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/emulation/: emulatorhandler.cpp  emulatorhandler.h
src/roms/: romcollection.cpp  romcollection.h  thegamesdbscraper.cpp  thegamesdbscraper.h
src/views/: clickablewidget.cpp  clickablewidget.h  gridview.cpp  gridview.h  listview.cpp  listview.h  tableview.cpp  tableview.h  treewidgetitem.cpp  treewidgetitem.h
src/views/widgets/: clickablewidget.cpp  treewidgetitem.cpp
windows/: icon.rc
